@startuml
class HumanBegin{
    -height Integer
    -weight Integer
    +setHeight(height) void
    +setWeight(weight) void
    +setBmi(bmi) void
    +getHeight() String
    +getBmi() String
}
class CalBMIHuman  {
    -human HumanBegin
    +calBMI(weight height) Integer
}
class AnayzelBMI  {
    -human HumanBegin
    +anayzel(weight height) String
}
HumanBegin --* CalBMIHuman
HumanBegin --* AnayzelBMI

@enduml
